--- a/style.css
+++ b/style.css
@@ -251,7 +251,7 @@ section #projet{
     margin-left: 100px;
 }
 .butn:hover{
-    color: #00806d;
+    background-color: #00806d;
 }
 /* Responsive Styles */
 @media screen and (max-width: 1024px) {
@@ -481,80 +481,102 @@ iframe {
     background: #EC4899;
     transition: width 1s ease-in-out;
 }
-/*contacts section*/
-#contacts {
-    background-color: #374151;
-    color: #f5ede0;
-    font-family: Arial, sans-serif;
-    display: flex;
+
+form{
+    width: 100%;
+    height: 100vh;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    margin: 0;
-}
-
-.contacts {
     background-color: #374151;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
+}
+form h2{
+    font-size: 3rem;
+    color: #f5ede0;
     text-align: center;
-    width: 600px;
-    /*height: 580px;
-    padding: 80px 5%;*/
 }
 
- .contacts h1 {
-    font-size: 24px;
-    margin-bottom: 10px;
-}
-.contacts h1 span{
+#contact h2 span{
     color: #EC4899;
 }
-.contacts p span{
-    color: #EC4899;
-}
-
-.contacts p {
-    margin-bottom: 20px;
-}
-
-label {
-    display: block;
-    margin: 10px 0 5px;
-}
-
-
-textarea {
+.form-content{
     width: 100%;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    margin-top: 15px;
-}
+    align-items: center;
+    justify-content: center;
+    margin-top: 100px;
 
-input, textarea {
+}
+.form-input1{
+    display: flex;
     width: 100%;
-    padding: 10px;
+    text-align: center;
+    color: #f5ede0;
+    gap: 20px;
+    justify-content: center;
+    gap: 65px; 
     margin-bottom: 15px;
-    border: none;
-    border-radius: 5px;
-    color:#444
 }
-
-button {
+.form-input1 label{
+    display: block;
+    font-size: 20px;
+    margin-bottom: 5px;
+    text-align: left;
+    }
+.form-input1 input{
+    font-size: 25px;
+    border: none;
+    padding: 5px;
+    border: 3px solid #EC4899;
+    border-radius: 10px;
+}
+.form-input2{
+    width: 100%;
+    text-align: center;
+    color: #f5ede0;
+    justify-content: center;
+}
+.form-input2 label{
+    display: block;
+    margin-bottom: 5px;
+    font-size: 20px;
+    margin-right: 35%;
+    
+}
+.form-input2 input{
+    font-size: 25px;
+    border: none;
+    border-radius: 10px;
+    padding: 5px;
+    width: 40%;
+    border: 3px solid #EC4899;
+ }  
+ .form-input3{
+    width: 100%;
+    text-align: center;
+    justify-content: center;
+ }
+ .form-input3 textarea{
+    border: none;
+    border-radius: 10px;
+    margin-top: 10px;
+    border: 3px solid #EC4899;
+ }
+.form-button{
+    width: 100%;
+    justify-content: center;
+    text-align: center;
+}
+.form-button button{
+    font-size: 40px;
     background-color: #EC4899;
-    color: rgb(243, 238, 238);
-    padding: 10px 15px;
+    color: #fff;
     border: none;
-    width: 200px;
-    height: 50px;
     border-radius: 5px;
-    cursor: pointer;
+    margin: 10px;
+    padding: 5px 20px;
+    cursor: pointer;
 }
-
-button:hover {
-    background-color: #45a049;
+.form-button button:hover{
+    background-color: #00b894;
 }
 footer{
     display: flex;
